--- a/package.json
+++ b/package.json
@@ -13,23 +13,26 @@
     "@clerk/nextjs": "^4.19.0",
     "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^4.15.0",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.3",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.4",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "crypto-js": "^4.1.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "jsonwebtoken": "^9.0.1",
     "lucide-react": "^0.233.0",
-    "next": "13.4.4",
+    "next": "^13.4.12",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -40,11 +43,18 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4",
+    "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "jest": "^29.5.0",
     "prisma": "^4.15.0",
     "ts-jest": "^29.1.0"
