fix lucid import

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "saas-template",
-  "version": "0.1.0",
+  "name": "password-guard",
+  "version": "0.6.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -23,15 +23,12 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.4",
     "@tailwindcss/typography": "^0.5.9",
-    "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "crypto-js": "^4.1.1",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
     "jsonwebtoken": "^9.0.1",
-    "lucide-react": "^0.233.0",
+    "lucide-react": "^0.265.0",
     "next": "^13.4.12",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
@@ -54,6 +51,9 @@
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.4",
     "jest": "^29.5.0",
     "prisma": "^4.15.0",
     "ts-jest": "^29.1.0"
