--- a/package.json
+++ b/package.json
@@ -38,9 +38,6 @@
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
-    "typescript": "5.0.4",
-    "@types/react": "^18.2.18",
-    "@types/react-dom": "^18.2.7",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
     "zod": "^3.21.4"
@@ -55,6 +52,9 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "jest": "^29.5.0",
+    "typescript": "^5.0.4",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "prisma": "^4.15.0",
     "ts-jest": "^29.1.0"
   }
