--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
 
     env:
       NEXT_PUBLIC_SUPERMASTERSALT: "abcefgh"
-      DATABASE_URL: "abcefgh"
+      DATABASE_URL: "postgres://abcefgh"
       JWT_SECRET: "abcefgh"
       JWT_REFRESH_SECRET: "abcefgh"
     steps:
